--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,8 +1,9 @@
 spring.application.name=SSI-1-ITB-Kradan-Kanban
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-spring.datasource.password=momor123
+spring.datasource.password=Ttewtewtew99.
 spring.datasource.username=root
 spring.datasource.url=jdbc:mysql://localhost:3306/integrated1
+
 #effect on real database
 spring.jpa.hibernate.ddl-auto=none
 spring.jpa.hibernate.naming.physical-strategy=org.hibernate.boot.model.naming.PhysicalNamingStrategyStandardImpl
