--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,5 +4,6 @@ spring.datasource.password=baiT2546-
 spring.datasource.username=root
 spring.datasource.url=jdbc:mysql://localhost:3306/integrated1
 #effect on real database
+server.error.include-stacktrace=never
 spring.jpa.hibernate.ddl-auto=none
 spring.jpa.hibernate.naming.physical-strategy=org.hibernate.boot.model.naming.PhysicalNamingStrategyStandardImpl
