--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,7 +3,12 @@ spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.datasource.password=Ttewtewtew99.
 spring.datasource.username=root
 spring.datasource.url=jdbc:mysql://localhost:3306/integrated1
+server.error.include-stacktrace=never
 
 #effect on real database
 spring.jpa.hibernate.ddl-auto=none
 spring.jpa.hibernate.naming.physical-strategy=org.hibernate.boot.model.naming.PhysicalNamingStrategyStandardImpl
+
+spring.jackson.time-zone=Asia/Bangkok
+spring.jpa.properties.hibernate.jdbc.time_zone=UTC
+server.servlet.encoding.charset=UTF-8
