--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -8,6 +8,6 @@ server.error.include-stacktrace=never
 spring.jpa.hibernate.ddl-auto=none
 spring.jpa.hibernate.naming.physical-strategy=org.hibernate.boot.model.naming.PhysicalNamingStrategyStandardImpl
 
-spring.jackson.time-zone=Asia/Bangkok
+spring.jackson.time-zone=UTC
 spring.jpa.properties.hibernate.jdbc.time_zone=UTC
 server.servlet.encoding.charset=UTF-8
