--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 spring.application.name=SSI-1-ITB-Kradan-Kaban
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-spring.datasource.password=baiT2546-
+spring.datasource.password=Ttewtewtew99.
 spring.datasource.username=root
 spring.datasource.url=jdbc:mysql://localhost:3306/integrated1
 #effect on real database
