--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,13 +1,16 @@
 spring.application.name=SSI-1-ITB-Kradan-Kaban
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-spring.datasource.password=momor123
-spring.datasource.username=root
-spring.datasource.url=jdbc:mysql://localhost:3306/integrated1
+#spring.datasource.password=mysql
+spring.datasource.password=${mysql_password:mysql}
+spring.datasource.username=${mysql_user:dev1}
+#spring.datasource.username=dev1
+#spring.datasource.url=jdbc:mysql://192.168.64.2:3306/integrated1
+spring.datasource.url=jdbc:mysql://${MYSQL_HOST:172.29.0.3}:3306/integrated1
 #effect on real database
 server.error.include-stacktrace=never
 spring.jpa.hibernate.ddl-auto=none
 spring.jpa.hibernate.naming.physical-strategy=org.hibernate.boot.model.naming.PhysicalNamingStrategyStandardImpl
-
+server.port=${port:8080}
 spring.jackson.time-zone=UTC
 spring.jpa.properties.hibernate.jdbc.time_zone=UTC
 server.servlet.encoding.charset=UTF-8
