update the getTask parameter

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,11 +1,11 @@
 spring.application.name=SSI-1-ITB-Kradan-Kaban
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 #spring.datasource.password=mysql
-spring.datasource.password=${mysql_password:mysql}
-spring.datasource.username=${mysql_user:dev1}
+spring.datasource.password=Ttewtewtew99.
+spring.datasource.username=root
 #spring.datasource.username=dev1
 #spring.datasource.url=jdbc:mysql://192.168.64.2:3306/integrated1
-spring.datasource.url=jdbc:mysql://${MYSQL_HOST:172.29.0.3}:3306/integrated1
+spring.datasource.url=jdbc:mysql://localhost:3306/integrated1
 #effect on real database
 server.error.include-stacktrace=never
 spring.jpa.hibernate.ddl-auto=none
@@ -14,3 +14,9 @@ server.port=${port:8080}
 spring.jackson.time-zone=UTC
 spring.jpa.properties.hibernate.jdbc.time_zone=UTC
 server.servlet.encoding.charset=UTF-8
+
+#
+#spring.datasource.password=${mysql_password:mysql}
+#spring.datasource.username=${mysql_user:dev1}
+#spring.datasource.url=jdbc:mysql://${MYSQL_HOST:172.29.0.3}:3306/integrated1
+
