--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,10 +1,7 @@
 spring.application.name=SSI-1-ITB-Kradan-Kaban
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-#spring.datasource.password=mysql
-spring.datasource.password=baiT2546-
+spring.datasource.password=Ttewtewtew99.
 spring.datasource.username=root
-#spring.datasource.username=dev1
-#spring.datasource.url=jdbc:mysql://192.168.64.2:3306/integrated1
 spring.datasource.url=jdbc:mysql://localhost:3306/integrated1
 #effect on real database
 server.error.include-stacktrace=never
