--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -14,5 +14,5 @@ server.servlet.encoding.charset=UTF-8
 
 spring.datasource.password=${mysql_password:mysql}
 spring.datasource.username=${mysql_user:dev1}
-spring.datasource.url=jdbc:mysql://${MYSQL_HOST:172.29.0.3}:3306/integrated1
+spring.datasource.url=jdbc:mysql://${mysql_url:dbserver}:${mysql_port:3306}/integrated1
 
