--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,16 +1,32 @@
 spring.application.name=SSI-1-ITB-Kradan-Kaban
-spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
- spring.datasource.password=Ttewtewtew99.
- spring.datasource.username=root
- spring.datasource.url=jdbc:mysql://localhost:3306/integrated1
-#effect on real database
-server.error.include-stacktrace=never
+#JPA
 spring.jpa.hibernate.ddl-auto=none
 spring.jpa.hibernate.naming.physical-strategy=org.hibernate.boot.model.naming.PhysicalNamingStrategyStandardImpl
-server.port=${port:8080}
+
+# User Account Datasource
+spring.datasource.ua.driver-class-name=com.mysql.cj.jdbc.Driver
+spring.datasource.ua.password=Ttewtewtew99.
+spring.datasource.ua.username=root
+spring.datasource.ua.url=jdbc:mysql://localhost:3306/user_account
+
+# User Project Board Datasource
+spring.datasource.pm.driver-class-name=com.mysql.cj.jdbc.Driver
+spring.datasource.pm.password=Ttewtewtew99.
+spring.datasource.pm.username=root
+spring.datasource.pm.url=jdbc:mysql://localhost:3306/project_board
+
+# stacktrace
+server.error.include-stacktrace=never
+
+# timezone
 spring.jackson.time-zone=UTC
 spring.jpa.properties.hibernate.jdbc.time_zone=UTC
+
+#encoding
 server.servlet.encoding.charset=UTF-8
+
+server.port=${port:8080}
+
 
 #spring.datasource.password=${mysql_password:mysql}
 #spring.datasource.username=${mysql_user:dev1}
