--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,8 +1,18 @@
 spring.application.name=SSI-1-ITB-Kradan-Kaban
-spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
- spring.datasource.password=Ttewtewtew99.
- spring.datasource.username=root
- spring.datasource.url=jdbc:mysql://localhost:3306/integrated1
+
+
+#Broad Database
+spring.datasource.broad.driver-class-name=com.mysql.cj.jdbc.Driver
+spring.datasource.broad.password=Ttewtewtew99.
+spring.datasource.broad.username=root
+spring.datasource.broad.url=jdbc:mysql://localhost:3306/integrated1
+
+#User Database
+spring.datasource.user.driver-class-name=com.mysql.cj.jdbc.Driver
+spring.datasource.user.password=Ttewtewtew99.
+spring.datasource.user.username=root
+spring.datasource.user.url=jdbc:mysql://localhost:3306/user_account
+
 #effect on real database
 server.error.include-stacktrace=never
 spring.jpa.hibernate.ddl-auto=none
