--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,15 +5,15 @@ spring.jpa.hibernate.naming.physical-strategy=org.hibernate.boot.model.naming.Ph
 
 # User Account Datasource
 spring.datasource.ua.driver-class-name=com.mysql.cj.jdbc.Driver
-spring.datasource.ua.password=Ttewtewtew99.
+spring.datasource.ua.password=baiT2546-
 spring.datasource.ua.username=root
 spring.datasource.ua.url=jdbc:mysql://localhost:3306/user_account
 
 # User Project Board Datasource
 spring.datasource.pm.driver-class-name=com.mysql.cj.jdbc.Driver
-spring.datasource.pm.password=Ttewtewtew99.
+spring.datasource.pm.password=baiT2546-
 spring.datasource.pm.username=root
-spring.datasource.pm.url=jdbc:mysql://localhost:3306/project_board
+spring.datasource.pm.url=jdbc:mysql://localhost:3306/integrated1
 
 # stacktrace
 server.error.include-stacktrace=never
