--- a/pom.xml
+++ b/pom.xml
@@ -65,6 +65,13 @@
             <artifactId>httpclient5</artifactId>
             <scope>test</scope>
         </dependency>
+        <dependency>
+            <groupId>de.mkammerer</groupId>
+            <artifactId>argon2-jvm</artifactId>
+            <version>2.11</version>
+        </dependency>
+
+
     </dependencies>
 
     <build>
