--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,36 +1,18 @@
 spring.application.name=SSI-1-ITB-Kradan-Kaban
-<<<<<<< HEAD
 
-
-#Broad Database
-spring.datasource.broad.driver-class-name=com.mysql.cj.jdbc.Driver
-spring.datasource.broad.password=Ttewtewtew99.
-spring.datasource.broad.username=root
-spring.datasource.broad.url=jdbc:mysql://localhost:3306/integrated1
-
-#User Database
-spring.datasource.user.driver-class-name=com.mysql.cj.jdbc.Driver
-spring.datasource.user.password=Ttewtewtew99.
-spring.datasource.user.username=root
-spring.datasource.user.url=jdbc:mysql://localhost:3306/user_account
-
-#effect on real database
-server.error.include-stacktrace=never
-=======
 #JPA
->>>>>>> pbi15-bi
 spring.jpa.hibernate.ddl-auto=none
 spring.jpa.hibernate.naming.physical-strategy=org.hibernate.boot.model.naming.PhysicalNamingStrategyStandardImpl
 
 # User Account Datasource
 spring.datasource.ua.driver-class-name=com.mysql.cj.jdbc.Driver
-spring.datasource.ua.password=baiT2546-
-spring.datasource.ua.username=root
-spring.datasource.ua.url=jdbc:mysql://localhost:3306/user_account
+spring.datasource.ua.password=VT4eTSRo
+spring.datasource.ua.username=authuser
+spring.datasource.ua.url=jdbc:mysql://ip23ft.sit.kmutt.ac.th:3306/itbkk_shared
 
 # User Project Board Datasource
 spring.datasource.pm.driver-class-name=com.mysql.cj.jdbc.Driver
-spring.datasource.pm.password=baiT2546-
+spring.datasource.pm.password=Ttewtewtew99.
 spring.datasource.pm.username=root
 spring.datasource.pm.url=jdbc:mysql://localhost:3306/integrated1
 
