--- a/pom.xml
+++ b/pom.xml
@@ -106,6 +106,11 @@
             <artifactId>spring-security-core</artifactId>
             <version>6.2.4</version>
         </dependency>
+        <dependency>
+            <groupId>org.springframework.security</groupId>
+            <artifactId>spring-security-config</artifactId>
+            <version>6.2.1</version>
+        </dependency>
 
     </dependencies>
 
