--- a/pom.xml
+++ b/pom.xml
@@ -111,6 +111,10 @@
             <artifactId>spring-security-config</artifactId>
             <version>6.2.1</version>
         </dependency>
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-security</artifactId>
+        </dependency>
 
     </dependencies>
 
