--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -10,11 +10,17 @@ spring.datasource.ua.password=VT4eTSRo
 spring.datasource.ua.username=authuser
 spring.datasource.ua.url=jdbc:mysql://ip23ft.sit.kmutt.ac.th:3306/itbkk_shared
 
+#spring.datasource.ua.driver-class-name=com.mysql.cj.jdbc.Driver
+#spring.datasource.ua.password=baiT2546-
+#spring.datasource.ua.username=root
+#spring.datasource.ua.url=jdbc:mysql://localhost:3306/user_account
+
 # User Project Board Datasource
 spring.datasource.pm.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.datasource.pm.password=baiT2546-
 spring.datasource.pm.username=root
 spring.datasource.pm.url=jdbc:mysql://localhost:3306/integrated1
+
 
 # stacktrace
 server.error.include-stacktrace=never
