--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,15 +5,15 @@ spring.jpa.hibernate.ddl-auto=none
 spring.jpa.hibernate.naming.physical-strategy=org.hibernate.boot.model.naming.PhysicalNamingStrategyStandardImpl
 
 # User Account Datasource
-#spring.datasource.ua.driver-class-name=com.mysql.cj.jdbc.Driver
-#spring.datasource.ua.password=VT4eTSRo
-#spring.datasource.ua.username=authuser
-#spring.datasource.ua.url=jdbc:mysql://ip23ft.sit.kmutt.ac.th:3306/itbkk_shared
-
 spring.datasource.ua.driver-class-name=com.mysql.cj.jdbc.Driver
-spring.datasource.ua.password=baiT2546-
-spring.datasource.ua.username=root
-spring.datasource.ua.url=jdbc:mysql://localhost:3306/user_account
+spring.datasource.ua.password=VT4eTSRo
+spring.datasource.ua.username=authuser
+spring.datasource.ua.url=jdbc:mysql://ip23ft.sit.kmutt.ac.th:3306/itbkk_shared
+
+#spring.datasource.ua.driver-class-name=com.mysql.cj.jdbc.Driver
+#spring.datasource.ua.password=baiT2546-
+#spring.datasource.ua.username=root
+#spring.datasource.ua.url=jdbc:mysql://localhost:3306/user_account
 
 # User Project Board Datasource
 spring.datasource.pm.driver-class-name=com.mysql.cj.jdbc.Driver
