jwt update success

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -17,7 +17,7 @@ spring.datasource.ua.url=jdbc:mysql://ip23ft.sit.kmutt.ac.th:3306/itbkk_shared
 
 # User Project Board Datasource
 spring.datasource.pm.driver-class-name=com.mysql.cj.jdbc.Driver
-spring.datasource.pm.password=baiT2546-
+spring.datasource.pm.password=momor123
 spring.datasource.pm.username=root
 spring.datasource.pm.url=jdbc:mysql://localhost:3306/integrated1
 
@@ -33,6 +33,11 @@ spring.jpa.properties.hibernate.jdbc.time_zone=UTC
 server.servlet.encoding.charset=UTF-8
 
 server.port=${port:8080}
+
+# security configs
+security.jwt.secret-key=huYj4NfuPsQ2/OfXwzb3xsqaJKqFkTxMDiyi9UVBkg8=
+security.jwt.expiration-time=1800000 
+public.url=https://intproj23.sit.kmutt.ac.th/ssi1/
 
 
 #spring.datasource.password=${mysql_password:mysql}
