--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -10,17 +10,11 @@ spring.datasource.ua.password=VT4eTSRo
 spring.datasource.ua.username=authuser
 spring.datasource.ua.url=jdbc:mysql://ip23ft.sit.kmutt.ac.th:3306/itbkk_shared
 
-#spring.datasource.ua.driver-class-name=com.mysql.cj.jdbc.Driver
-#spring.datasource.ua.password=baiT2546-
-#spring.datasource.ua.username=root
-#spring.datasource.ua.url=jdbc:mysql://localhost:3306/user_account
-
 # User Project Board Datasource
 spring.datasource.pm.driver-class-name=com.mysql.cj.jdbc.Driver
-spring.datasource.pm.password=Ttewtewtew99.
+spring.datasource.pm.password=
 spring.datasource.pm.username=root
 spring.datasource.pm.url=jdbc:mysql://localhost:3306/integrated1
-
 
 # stacktrace
 server.error.include-stacktrace=never
@@ -36,7 +30,7 @@ server.port=${port:8080}
 
 # security configs
 security.jwt.secret-key=huYj4NfuPsQ2/OfXwzb3xsqaJKqFkTxMDiyi9UVBkg8=
-security.jwt.expiration-time=1800000 
+security.jwt.expiration-time=1800000
 public.url=https://intproj23.sit.kmutt.ac.th/ssi1/
 
 
