--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -17,9 +17,9 @@ spring.datasource.ua.url=jdbc:mysql://ip23ft.sit.kmutt.ac.th:3306/itbkk_shared
 
 # User Project Board Datasource
 spring.datasource.pm.driver-class-name=com.mysql.cj.jdbc.Driver
-spring.datasource.pm.password=mysql
-spring.datasource.pm.username=dev1
-spring.datasource.pm.url=jdbc:mysql://192.168.80.3:3306/integrated1
+spring.datasource.pm.password=Ttewtewtew99.
+spring.datasource.pm.username=root
+spring.datasource.pm.url=jdbc:mysql://localhost:3306/integrated1
 
 
 # stacktrace
