--- a/pom.xml
+++ b/pom.xml
@@ -120,6 +120,11 @@
             <artifactId>jnanoid</artifactId>
             <version>2.0.0</version>
         </dependency>
+        <dependency>
+            <groupId>mysql</groupId>
+            <artifactId>mysql-connector-java</artifactId>
+            <version>8.0.33</version> <!-- or the latest version -->
+        </dependency>
     </dependencies>
 
     <build>
