--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,6 +2,7 @@ spring.application.name=SSI-1-ITB-Kradan-Kaban
 #JPA
 spring.jpa.hibernate.ddl-auto=none
 spring.jpa.hibernate.naming.physical-strategy=org.hibernate.boot.model.naming.PhysicalNamingStrategyStandardImpl
+# TEST
 # User Account Datasource
 spring.datasource.ua.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.datasource.ua.password=VT4eTSRo
