new task attachment entity update

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -32,3 +32,6 @@ public.url=https://intproj23.sit.kmutt.ac.th/ssi1/
 #spring.datasource.username=${mysql_user:dev1}
 #spring.datasource.url=jdbc:mysql://${mysql_url:dbserver}:${mysql_port:3306}/integrated1
 
+# file service
+#file.upload-dir=./files-uploads
+
