--- a/pom.xml
+++ b/pom.xml
@@ -125,6 +125,11 @@
             <artifactId>mysql-connector-java</artifactId>
             <version>8.0.33</version> <!-- or the latest version -->
         </dependency>
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-configuration-processor</artifactId>
+            <optional>true</optional>
+        </dependency>
     </dependencies>
 
     <build>
