set environment for sent email
- add dependency
- initial the service
- config the application.property

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -32,3 +32,15 @@ public.url=https://intproj23.sit.kmutt.ac.th/ssi1/
 #spring.datasource.username=${mysql_user:dev1}
 #spring.datasource.url=jdbc:mysql://${mysql_url:dbserver}:${mysql_port:3306}/integrated1
 
+#Email property
+spring.mail.host=smtp.gmail.com
+# Port 587 is commonly used for sending emails over SMTP. It?s considered the standard port for secure email submission (sending emails from a client to a mail server)
+spring.mail.port=587
+
+#for the sender's email account.
+spring.mail.username=tew2945@gmail.com
+spring.mail.password=992521935
+
+spring.mail.properties.mail.smtp.auth=true
+spring.mail.properties.mail.smtp.starttls.enable=true
+spring.mail.properties.mail.smtp.starttls.required=true
