--- a/pom.xml
+++ b/pom.xml
@@ -125,8 +125,11 @@
             <artifactId>mysql-connector-java</artifactId>
             <version>8.0.33</version> <!-- or the latest version -->
         </dependency>
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-mail</artifactId>
+        </dependency>
     </dependencies>
-
     <build>
         <plugins>
             <plugin>
