--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -10,7 +10,7 @@ spring.datasource.ua.username=authuser
 spring.datasource.ua.url=jdbc:mysql://ip23ft.sit.kmutt.ac.th:3306/itbkk_shared
 # User Project Board Datasource
 spring.datasource.pm.driver-class-name=com.mysql.cj.jdbc.Driver
-spring.datasource.pm.password=Ttewtewtew99.
+spring.datasource.pm.password=momor123
 spring.datasource.pm.username=root
 spring.datasource.pm.url=jdbc:mysql://localhost:3306/integrated2
 # stacktrace
@@ -27,11 +27,14 @@ security.jwt.secret-key=eyJhbGciOiJIUzI1NiJ9eyJSb2xlIjoiQWRtaW4iLCJJc3N1ZXIiOiJJ
 #security.jwt.refresh-token.expiration-time=120000
 security.jwt.access-token.expiration-time=1800000
 security.jwt.refresh-token.expiration-time=86400000
+#security.jwt.access-token.expiration-time=30000
+#security.jwt.refresh-token.expiration-time=60000
 public.url=https://intproj23.sit.kmutt.ac.th/ssi1/
 #spring.datasource.password=${mysql_password:mysql}
 #spring.datasource.username=${mysql_user:dev1}
 #spring.datasource.url=jdbc:mysql://${mysql_url:dbserver}:${mysql_port:3306}/integrated1
 
 # file service
-#file.upload-dir=./files-uploads
+spring.servlet.multipart.max-file-size = 20MB
+spring.servlet.multipart.max-request-size = 200MB
 
