--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -37,4 +37,5 @@ public.url=https://intproj23.sit.kmutt.ac.th/ssi1/
 # file service
 spring.servlet.multipart.max-file-size = 20MB
 spring.servlet.multipart.max-request-size = 200MB
+spring.servlet.multipart.resolve-lazily=true
 
