--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -35,7 +35,6 @@ public.url=https://intproj23.sit.kmutt.ac.th/ssi1/
 #spring.datasource.url=jdbc:mysql://${mysql_url:dbserver}:${mysql_port:3306}/integrated1
 
 # file service
-spring.servlet.multipart.max-file-size = 20MB
-spring.servlet.multipart.max-request-size = 200MB
-spring.servlet.multipart.resolve-lazily=true
+spring.servlet.multipart.max-file-size = -1
+spring.servlet.multipart.max-request-size = -1
 
