--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -38,8 +38,8 @@ spring.mail.host=smtp.gmail.com
 spring.mail.port=587
 
 #for the sender's email account.
-spring.mail.username=tew2945@gmail.com
-spring.mail.password=992521935
+spring.mail.username=teeratorn.thie@mail.kmutt.ac.th
+spring.mail.password=pjnj arxm ujjy fsrn
 
 spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.starttls.enable=true
