first sending mail completed.

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -34,13 +34,11 @@ public.url=https://intproj23.sit.kmutt.ac.th/ssi1/
 
 #Email property
 spring.mail.host=smtp.gmail.com
-# Port 587 is commonly used for sending emails over SMTP. It?s considered the standard port for secure email submission (sending emails from a client to a mail server)
+# Port 587 is commonly used for sending emails over SMTP. It's considered the standard port for secure email submission (sending emails from a client to a mail server)
 spring.mail.port=587
-
 #for the sender's email account.
 spring.mail.username=teeratorn.thie@mail.kmutt.ac.th
 spring.mail.password=pjnj arxm ujjy fsrn
 
 spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.starttls.enable=true
-spring.mail.properties.mail.smtp.starttls.required=true
