--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -10,7 +10,7 @@ spring.datasource.ua.username=authuser
 spring.datasource.ua.url=jdbc:mysql://ip23ft.sit.kmutt.ac.th:3306/itbkk_shared
 # User Project Board Datasource
 spring.datasource.pm.driver-class-name=com.mysql.cj.jdbc.Driver
-spring.datasource.pm.password=Ttewtewtew99.
+spring.datasource.pm.password=momor123
 spring.datasource.pm.username=root
 spring.datasource.pm.url=jdbc:mysql://localhost:3306/integrated2
 # stacktrace
@@ -37,6 +37,7 @@ public.url=https://intproj23.sit.kmutt.ac.th/ssi1/
 # file service
 spring.servlet.multipart.max-file-size = -1
 spring.servlet.multipart.max-request-size = -1
+file.upload-dir=./files
 
 #Email property
 spring.mail.host=smtp.gmail.com
@@ -48,4 +49,6 @@ spring.mail.password=pjnj arxm ujjy fsrn
 
 spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.starttls.enable=true
+
+
 
