--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -10,7 +10,7 @@ spring.datasource.ua.username=authuser
 spring.datasource.ua.url=jdbc:mysql://ip23ft.sit.kmutt.ac.th:3306/itbkk_shared
 # User Project Board Datasource
 spring.datasource.pm.driver-class-name=com.mysql.cj.jdbc.Driver
-spring.datasource.pm.password=momor123
+spring.datasource.pm.password=baiT2546-
 spring.datasource.pm.username=root
 spring.datasource.pm.url=jdbc:mysql://localhost:3306/integrated2
 # stacktrace
@@ -49,6 +49,11 @@ spring.mail.password=pjnj arxm ujjy fsrn
 
 spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.starttls.enable=true
+
+#Azure AD
+spring.security.oauth2.resourceserver.jwt.issuer-uri=https://login.microsoftonline.com/79845616-9df0-43e0-8842-e300feb2642a/v2.0
+spring.security.oauth2.resourceserver.jwt.audience=09e2e41e-7858-4b0d-87b2-9efbad2384ca
+
 
 
 
