--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -51,8 +51,11 @@ spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.starttls.enable=true
 
 #Azure AD
-spring.security.oauth2.resourceserver.jwt.issuer-uri=https://login.microsoftonline.com/79845616-9df0-43e0-8842-e300feb2642a/v2.0
-spring.security.oauth2.resourceserver.jwt.audience=09e2e41e-7858-4b0d-87b2-9efbad2384ca
+spring.security.oauth2.client.registration.microsoft.client-id=09e2e41e-7858-4b0d-87b2-9efbad2384ca
+spring.security.oauth2.client.registration.microsoft.client-secret=ff90600f-34f0-4ac2-adc6-7c3e6d2acd64
+azure.client-id=09e2e41e-7858-4b0d-87b2-9efbad2384ca
+azure.client-secret=ff90600f-34f0-4ac2-adc6-7c3e6d2acd64
+azure.tenant-id=79845616-9df0-43e0-8842-e300feb2642a
 
 
 
